styles.css
body {
    margin: 0 0 0 0;
    padding: 0 0 0 0;
    background-image: url("wood01.jpg");
    background-size: cover;
    position: relative; /* This is needed for absolute positioning inside */
  }
h1 {
    margin: 0%;
    background-color: rgba(240, 248, 255, 0.253);
    font-family: 'Josefin Sans', sans-serif;
    color: darkslategray;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}





div {
    font-family: 'Josefin Sans', sans-serif;
    color: darkslategray;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.graphic {
    width: 100px;
    height: 100px;
    background-image: url('bitmap.png'); /* Replace with your graphic */
    border-radius: 50%; /* Optional, for a circular shape */
    pointer-events: none; /* This makes sure the mouse can still click 'through' the graphic */
  }
  

